--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <p> I love to drum, eat, sleep, eat and munge through data. </p> 
 <p>Email: <a href="mailto:mark.leviejr@gmail.com">mark.levinejr@gmail.com</a></p>
-<p>GitHub: <a href="https://markovcredit.github.io/">GitHub</a></p>
+<p>GitHub: <a href="https://github.com/MarkovCredit/">MarkovCredit</a></p>
 
 
 
