--- a/cloudiness.html
+++ b/cloudiness.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="D:\freebie-footer-templates\css\footer-distributed-with-contact-form.css">
+  <link rel="stylesheet" href="footer-distributed-with-contact-form.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -44,7 +44,7 @@
                 </ul>
               </li>
         <li><a href="comparisons.html">Comparisons</a></li>
-        <li><a href="#">Data Table</a></li>
+        <li><a href="datapage_table.html">Data Table</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <!-- <li><a href="https://www.amazon.com/s?k=free&ref=nb_sb_noss_2"><span class="glyphicon glyphicon-user"></span> Sign Up For Free Amazon packages!</a></li> -->
