--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
  <footer class="footer-basic-centered">
 
       <p class="footer-links">
-      <a href="LandingPage.html">Home</a>
+      <a href="index.html">Home</a>
       ·
       <a href="https://www.linkedin.com/in/mark-levine-26192628/">Linkedin</a>
       ·
