--- a/bibleclassmodel.html
+++ b/bibleclassmodel.html
@@ -122,5 +122,24 @@ $("#searchForm").submit(function( event ) {
 });
 </script>
  
+<div class="panel-footer" style="margin-bottom:0"> 
+    
+  <footer class="footer-basic-centered">
+ 
+       <p class="footer-links">
+       <a href="index.html">Home</a>
+       ·
+       <a href="https://www.linkedin.com/in/mark-levine-26192628/">Linkedin</a>
+       ·
+       <a href="https://github.com/MarkovCredit/">My Git Hub</a>
+       ·
+       <a href="mailto:mark.levinejr@gmail.com">Email</a>
+       <a href="https://www.missionbible.org/">Jesus is Lord.</a>
+     </p>
+ 
+     <p class="footer-company-name">ML<sup>2</sup></p>
+ 
+   </footer>
+ </div>
 </body>
 </html>
